<resources>
    <string name="app_name">ChitChat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--registration and password text-->
    <string name="welcome">Welcome to ChitChat!</string>
    <string name="hint">Please login or register</string>
    <string name="nickname">Nickname</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="invalidPhone">Invalid Phone Number. ex: 2531234567</string>
    <string name="invalidEmail">Invalid Email Address</string>
    <string name="emailExists">This email already exists. Please login or register with a different email.</string>
    <string name="nickNameExists">This nickname already exists. Please login or register with a different nickname.</string>
    <string name="email">Email</string>
    <string name="fullName">Full Name</string>
    <string name="UserDisplayPrefMessage">How would you like to be displayed to others:</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="registerHint">Please register for an account:</string>
    <string name="empty">Empty field</string>
    <string name="passNotMatch">Password does not match</string>
    <string name="passToSmall">Password must be at least 6 characters</string>
    <string name="success">Login Successful!</string>
    <string name="missingChar">Field is missing @ symbol</string>
    <string name="uppercase_error">Password must have at least one uppercase letter.</string>
    <string name="lowercase_error">Password must have at least one lowercase letter.</string>
    <string name="special_error">Password must contain at least one special character.</string>
    <string name="number_error">Password must contain at least one number.</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="action_logout">Logout</string>

    <!--Forgot password prompts-->
    <string name="login_forgot_password_button_txt">Forgot Password</string>
    <string name="forgotpass_password_prompt_greeting">Oops</string>
    <string name="forgotpass_password_prompt_message">Looks like someone forgot something. Enter your username or email address and we\'ll send you a new password faster than a hamster running in a wheel…</string>
    <string name="forgotpass_user_creds_hint">Enter User ID</string>
    <string name="forgotpass_enter_pin_button">I have a Pin</string>
    <string name="forgotpass_send_pin_button">Get Pin</string>

    <string name="changepass_greeting">Change Password</string>
    <string name="changepass_message">Passwords must be at least 6 characters long contain an uppercase letter and at least one special character</string>
    <string name="changepass_confirm_button">Submit</string>

    <!--Toasts-->
    <string name="toast_error_unidentified_user">Sorry we could not find that user</string>
    <string name="toast_error_user_not_verified">It looks like you are not verified yet. Please verify your account</string>

    <!--Verification-->
    <string name="verification_greeting_title">Who Are You?</string>
    <string name="verification_greeting_subtitle">To verify your email, we have sent a verification code to the email address:</string>
    <string name="verification_greeting_subtitle2">Please enter your 4 digit verification code below:</string>
    <string name="verification_prompt">Verification Code</string>
    <string name="verification_resend_email">Resend Email</string>
    <string name="verification_validate_code">Verify</string>
    <string name="invalid_code">Invalid Validation Code. Please re-enter your code.</string>
    <string name="verification_fail">OOPS! Something failed on our end. Verification Failed.</string>
    <string name="email_sent_msg">We have sent you an email with a new verification code.</string>

    <!--End Points-->
    <string name="ep_base_url">group3-backend.herokuapp.com</string>
    <string name="ep_login">login</string>
    <string name="ep_register">register</string>
    <string name="ep_with_token">with_token</string>
    <string name="ep_messaging_base">messaging</string>
    <string name="ep_messaging_send">send</string>
    <string name="ep_get_all">getAll</string>
    <string name="ep_chat_all">create-chat</string>
    <string name="ep_is_typing">is-typing</string>
    <string name="ep_done_typing">done-typing</string>

    <!--Activity menu_options drawer nav labels-->
    <string name="home_drawer_home">Home</string>
    <string name="home_drawer_add_user">Add Friend</string>
    <string name="home_drawer_view_chats">My Chats</string>
    <string name="home_drawer_create_group">Create Group</string>
    <string name="home_drawer_connections">My Friends</string>
    <string name="home_drawer_requests">Friend Requests</string>
    <string name="home_drawer_weather">Weather</string>
    <string name="home_drawer_referFriend">Refer-a-Friend</string>

    <!--action bar-->
    <string name="logout">Logout</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ChitChat - Get Chatting</string>
    <string name="nav_header_subtitle"> is logged in.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--view friends-->
    <string name="view_friends_greeting">My Friends</string>

    <!--settings fragment-->
    <string name="settings_greeting">Settings</string>
    <string name="change_password_button">Change Password</string>
    <string name="change_nickname_button">Change Nickname</string>
    <string name="choose_theme_button">Choose Theme</string>
    <string name="change_display_name">Change Display Name</string>
    <string name="change_display_apply">Apply</string>

    <!--chat fragment menu -->
    <string name="chatmenu_add">Add Friend to Chat</string>
    <string name="chatmenu_leave">Leave Chat</string>
    <string name="chatmenu_remove">Remove Friend from Chat</string>


    <!--password Requirements-->
    <string name="passwordRequirements">
        Password must contain:\n
        6 or more characters\n
        At least one number\n
        At least one uppercase letter\n
        At least one lowercase letter
    </string>

    <!--Friend Request Strings-->
    <string name="requests_pending">Pending</string>
    <string name="request_accepted">Accepted!</string>
    <string name="request_denied">Rejected!</string>
    <string name="request_error">Error. Try again later…</string>

    <string name="viewFriends_phone">Phone Number:</string>
    <string name="viewFriends_email">Email:</string>
    <string name="viewFriends_addToChat">Add to Chat</string>
    <string name="viewFriends_myFriends">My Friends</string>
    <string name="viewFriends_startChat">Start Chat</string>
    <string name="viewFriends_chatName_hint">Chat Name</string>
    <string name="viewFriends_deleteFriend_text">Delete Friend</string>
    <string name="viewFriends_deleteFriend_done">Friend Deleted</string>

    <string name="title_activity_maps">Map</string>

    <string name="title_myChats">My Chats</string>
    <string name="subtitle_refer_friend">Want to talk to a friend who doesn\'t have ChitChat? No problem! Enter their email
    here and we will send them an invitation. Every referral you send that creates an account gets you one free month of ChitChat! We\'re
    joking of course. ChitChat is always free!</string>
    <string name="referFriend_friendsemail">Your Friend\'s Email</string>
    <string name="referFriend_sendInvite">Send Invitation!</string>
    <string name="referFriend_inviteSent">Invitation Sent!</string>
    <string name="referFriend_friend_active">The user with this email already has an account, let\'s send them a friend request instead!</string>
    <string name="referFriend_friend_inactive">The user with this email already exists, but is not verified. We\'ve sent them a reminder!</string>

</resources>
