<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home_drawer_home" />

        <item
            android:id="@+id/addUser"
            android:icon="@drawable/add_person"
            android:title="@string/home_drawer_add_user" />

        <item
            android:id="@+id/createChat"
            android:icon="@drawable/chat"
            android:title="@string/home_drawer_create_chat" />

        <item
            android:id="@+id/createGroup"
            android:icon="@drawable/groupchat"
            android:title="@string/home_drawer_create_group" />

        <item
            android:id="@+id/connections"
            android:icon="@drawable/connections"
            android:title="@string/home_drawer_connections" />

        <item
            android:id="@+id/requests"
            android:icon="@drawable/requests"
            android:title="@string/home_drawer_requests" />

        <item
            android:id="@+id/weather"
            android:icon="@drawable/weather"
            android:title="@string/home_drawer_weather" />
    </group>

</menu>
